--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <img id="mountains_behind" src="mountains_behind.png" alt="" />
       <h2 id="moontext">Moon Light</h2>
       <img id="mountains_front" src="mountains_front.png" alt="" />
-      <a class="explorer" href="#text">Explore</a>
+      <a class="explorer" href="#sec">Explore</a>
     </section>
     <div id="sec">
       <h1 id="text">
@@ -42,11 +42,54 @@
       <p id="paragraph">
         <br /><br />
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, quaerat
-        deserunt fuga non magni id qui facilis quia porro veniam rem maxime
-        commodi officiis animi nesciunt recusandae illum optio incidunt. Lorem
-        ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur maxime,
-        harum accusamus odio, quis eum iste mollitia exercitationem natus earum
-        commodi placeat voluptates sapiente qui inventore, pariatur porro odit
+        deserunt fuga non mr porro od<br /><br />
+        maxime saepe minima nam eveniet odit perspiciatis suscipit sunt in
+        error. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Numquam, iusto! Amet, consequatur nam ex itaque eveniet autem qui
+        mollitia ipsam! Possimus ipsam, ab asperior<br /><br />
+        maxime saepe minima nam eveniet odit perspiciatis suscipit sunt in
+        error. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Numquam, iusto! Amet, consequatur nam ex itaque eveniet autem qui
+        mollitia ipsam! Possimus ipsam, ab asperiores perferendis omnis mollitia
+        neque unde optio! Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Eum, omnis blanditiis ipsam quos officia, praesentium maxime
+        deserunt molestias, doloribus iusto earum voluptatum nobis tenetur
+        quibusdam. <br /><br /><br /><br />
+        maxime saepe minima nam eveniet odit perspiciatis suscipit sunt in
+        error. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Numquam, iusto! Amet, consequatur nam ex itaque eveniet autem qui
+        mollitia ipsam! Possimus ipsam, ab asperiores perferendis omnis mollitia
+        neque unde optio! Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Eum, omnis blanditiis ipsam quos officia, praesentium maxime
+        deserunt molestias, doloribus iusto earum voluptatum nobis tenetur
+        quibusdam. <br /><br /><br /><br />
+        maxime saepe minima nam eveniet odit perspiciatis suscipit sunt in
+        error. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Numquam, iusto! Amet, consequatur nam ex itaque eveniet autem qui
+        mollitia ipsam! Possimus ipsam, ab asperiores perferendis omnis mollitia
+        neque unde optio! Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Eum, omnis blanditiis ipsam quos officia, praesentium maxime
+        deserunt molestias, doloribus iusto earum voluptatum nobis tenetur
+        quibusdam. <br /><br /><br /><br />
+        maxime saepe minima nam eveniet odit perspiciatis suscipit sunt in
+        error. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Numquam, iusto! Amet, consequatur nam ex itaque eveniet autem qui
+        mollitia ipsam! Possimus ipsam, ab asperiores perferendis omnis mollitia
+        neque unde optio! Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Eum, omnis blanditiis ipsam quos officia, praesentium maxime
+        deserunt molestias, doloribus iusto earum voluptatum nobis tenetur
+        quibusdam. <br /><br /><br /><br />
+        maxime saepe minima nam eveniet odit perspiciatis suscipit sunt in
+        error. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Numquam, iusto! Amet, consequatur nam ex itaque eveniet autem qui
+        mollitia ipsam! Possimus ipsam, ab asperiores perferendis omnis mollitia
+        neque unde optio! Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Eum, omnis blanditiis ipsam quos officia, praesentium maxime
+        deserunt molestias, doloribus iusto earum voluptatum nobis tenetur
+        quibusdam. <br /><br />es perferendis omnis mollitia neque unde optio!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, omnis
+        blanditiis ipsam quos officia, praesentium maxime deserunt molestias,
+        doloribus iusto earum voluptatum nobis tenetur quibusdam. <br /><br />it
         soluta. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
         Architecto laudantium, eligendi nostrum dicta tempora facilis cupiditate
         voluptate iusto fugiat<br /><br />
@@ -60,34 +103,36 @@
         quibusdam. <br /><br />
         vitae modi distinctio asperiores! Lorem ipsum dolor sit amet,
         consectetur adipisicing elit. Facilis quidem aperiam dolor earum
-        temporibus recusandae aliquam dicta repellat, ro veniam rem maxime
-        commodi officiis animi nesciunt recusandae illum optio incidunt. Lorem
-        ipss omnis mollitia neque unde optio! Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Eum, omnis blanditiis ipsam quos officia,
-        praesentium maxime deserunt molestias, doloribus iusto earum voluptatum
-        nobis tenetur quibusdam. Aut vitae modi distinctio asperiores! Lorem
-        ipsum dolor sit amet, consectetur adipisicing elit. Facilis quidem
-        aperiam dolor earum temporibus recusandae aliquam dicta repellat,
-        consectetur distinctio error incidunt consequuntur ullam, tenetur<br /><br />
+        temporibus recusandae aliquam dict<br /><br />
+        maxime saepe minima nam eveniet odit perspiciatis suscipit sunt in
+        error. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Numquam, iusto! Amet, consequatur nam ex itaque eveniet autem qui
+        mollitia ipsam! Possimus ipsam, ab asperiores perferendis omnis mollitia
+        neque unde optio! Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Eum, omnis blanditiis ipsam quos officia, praesentium maxime
+        deserunt molestias, doloribus iusto earum voluptatum nobis tenetur
+        quibusdam. <br /><br />a repellat, ro veniam rem maxime commodi officiis
+        animribus iusto earum voluptatum nobis tenetur quibusdam. Aut vitae modi
+        distinctio asperiores! Lorem ipsum dolor sit amet, consectetur
+        adipisicing elit. Facilis quidem aperiam dolor earum temporibus
+        recusandae aliquam dicta repellat, consectetur distinctio error incidunt
+        consequuntur ullam, tenetur<br /><br />
         modi suscipit ratione at voluptatum. Lorem ipsum dolor sit amet
         consectetur adipisicing elit. Vero neque pariatur dignissimos,
-        voluptates ipsa quae possimus id adipisci libero dolor laudantium unde
-        expedita inventore numquam at asperiores quia recusandae! Velit? Lorem
-        ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit
-        ratione porro sequi vitae expedita labore explicabo quia fuga,
-        dignissimos non blanditiis, impedit est vero quis cupiditate aliquam
-        repudiandae? Numquam, eius. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Eos, quaerat deserunt fuga non magni id qui facilis
-        quia porro veniam rem maxime commodi officiis animi nesciunt recusandae
-        illum optio inci<br /><br />dunt. Lorem ipsum dolor sit amet
-        consectetur, adipisicing elit. Aspernatur maxime, harum accusamus odio,
-        quis eum iste mollitia exercitationem natus earum commodi placeat
-        voluptates sapiente qui inventore, pariatur porro odit soluta. Lorem
-        ipsum, dolor sit amet consectetur adipisicing elit. Architecto
-        laudantium, eligendi nostrum dicta tempora facilis cupiditate voluptate
-        iusto fugiat maxime saepe minima nam eveniet odit perspiciatis suscipit
-        sunt in error. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-        Numquam, iusto! Amet, consequatur nam ex itaque e<br /><br />veniet
+        voluptates ipsa quae posselit. Reprehenderit ratione porro sequi vitae
+        expedita labore explicabo quia fuga, dignissimos non blanditiis, impedit
+        est vero quis cupiditate aliquam repudiandae? Numquam, eius. Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Eos, quaerat deserunt fuga
+        non magni id qui facilis quia porro veniam rem maxime commodi officiis
+        animi nesciunt recusandae illum optio inci<br /><br />dunt. Lorem ipsum
+        dolor sit amet consectetur, adipisicing elit. Aspernatur maxime, harum
+        accusamus odio, quis eum iste mollitia exercitationem natus earum
+        commodi placeat voluptates sapiente qui inventore, pariatur porro odit
+        soluta. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+        Architecto laudantium, eligendi nostrum dicta tempora facilis cupiditate
+        voluptate iusto fugiat maxime saepe minima nam eveniet odit perspiciatis
+        suscipit sunt in error. Lorem ipsum dolor sit amet consectetur,
+        adipisicing elit. Numquam, iusto! Amet, consequatur nam ex itaque e<br /><br />veniet
         autem qui mollitia ipsam! Possimus ipsam, ab asperiores perferendis
         omnis mollitia neque unde optio! Lorem ipsum dolor sit amet consectetur
         adipisicing elit. Eum, omnis blanditiis ipsam quos officia, praesentium
@@ -97,12 +142,10 @@
         aperiam dolor earum temporibus recusandae aliquam dicta repellat,
         consectetur distinctio error incidunt consequuntur ullam, tenetur modi
         suscipit ratione at voluptatum. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Vero neque pariatur dignissimos, voluptates ipsa quae
-        possimus id adipisci libero dolor laudantium unde expedita inventore
-        numquam at asperiores quia recusandae! Velit? Lorem ipsum dolor, sit
-        amet consectetur adipisicing elit. Reprehenderit ratione porro sequi
-        vitae expedita labore explicabo quia fuga, dignissimos non blanditiis,
-        impedit est vero quis cupiditate aliquam repudiandae? Numquam, eius.
+        adipisicing elitndae! Velit? Lorem ipsum dolor, sit amet consectetur
+        adipisicing elit. Reprehenderit ratione porro sequi vitae expedita
+        labore explicabo quia fuga, dignissimos non blanditiis, impedit est vero
+        quis cupiditate aliquam repudiandae? Numquam, eius.
       </p>
     </div>
     <script src="main.js"></script>
