--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <img id="mountains_behind" src="mountains_behind.png" alt="" />
       <h2 id="moontext">Moon Light</h2>
       <img id="mountains_front" src="mountains_front.png" alt="" />
-      <a class="explorer" href="#sec">Explore</a>
+      <a class="explorer" href="#text">Explore</a>
     </section>
     <div id="sec">
       <h1 id="text">
